--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
     <label>Your Balance:</label>
     <textarea type="mySimpleLabel" id="myBalance" spellcheck="false">0 Ether</textarea>
     <br><br>
+    <br>
+    <label id="status" style="overflow: hidden; word-wrap: break-word; display: inline-block; white-space: pre-wrap; font-size: 12px; Color: Red;">Welcome To Ethify </label>
     
 </body>
 </html>
