--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body>
+
     <h1>Ethify</h1><br>
     <h2>The Ethereum Messenger</h2>
     <hr style="border: 1px solid black; margin-top: -5px;" />
@@ -32,6 +32,11 @@
     <label>Your Balance:</label>
     <textarea type="mySimpleLabel" id="myBalance" spellcheck="false">0 Ether</textarea>
     <br><br>
+    <label>User directory:</label> <br>
+    <input type="myDefaultButton" value="Copy" onclick="App.copyAddressToSend()" style="float:right"></input>
+    <div style="overflow: hidden; padding-right: 10px;">
+      <select type="registeredUsersAddressMenu" id='registeredUsersAddressMenu'></select>​
+    </div>
     <br>
     <label id="status" style="overflow: hidden; word-wrap: break-word; display: inline-block; white-space: pre-wrap; font-size: 18px; Color: orange;">Welcome To Ethify </label>
     
